Tiny change from the Mac Air.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65434 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -4179,8 +4179,15 @@ print "Done!"
 \end{verbatim}
 \afterverb
 %
-The variable {\tt friends} is a list\footnote{We will examine lists in more detail
-in a later chapter} of three strings and the {\tt for}
+Translating this look to English is not a direct as the 
+{\tt while}, but if you think of friends as a {\bf set},
+it goes like this: ``Run the statements in the body of the 
+for loop once for each friend {\em in} the set named friends.''.
+
+In Python terms, 
+the variable {\tt friends} is a list\footnote{We will 
+examine lists in more detail in a later chapter} 
+of three strings and the {\tt for}
 loop goes through the list and executes the body once
 for each of the three strings in the list resulting in this output:
 
