--- a/book.tex
+++ b/book.tex
@@ -102,7 +102,6 @@ Version \theversion
 
 {\Large
 Charles Severance\\
-Allen B. Downey\\
 }
 
 
@@ -4219,15 +4218,80 @@ Often we use a for or while loop to go through a list of items
 or the contents of a file and we are looking for something such as
 the largest or smallest value of the data we scan through.
 
-These loops fall into several patterns.
+These loops are generally constructed by:
 
-\subsection{Counting loop}
+\begin{itemize}
 
-% TBD
+\item Create one or more variables and initialize them before the loop
+starts.
 
-\subsection{Summing loop (total)}
+\item Look at each of the items in the loop and perform some computation
+on each item, possibly changing the variables in the body of the loop
 
-% TBD
+\item At the end of the loop, the variables contain the information
+we are looking for
+
+\end{itemize}
+
+We will use a list of numbers to demonstrate the concepts and construction
+of these loop patterns.  
+
+\subsection{Counting and summing loops}
+
+For example, to count the number of items
+in a list, we would write the following {\tt for} loop:
+
+\beforeverb
+\begin{verbatim}
+count = 0
+for iterval in [3, 41, 12, 9, 74, 15]:
+    count = count + 1
+print "Count: ", count
+\end{verbatim}
+\afterverb
+%
+We set the variable {\tt count} to zero before the loop starts,
+then we write a {\tt for} loop to run through the list of numbers.
+Our {\bf iteration} variable is named {\tt itervar} and while we do
+not use {\tt itervar} in the loop, it does control the loop and cause
+the loop body to be executed once for each of the values in the list.
+
+In the body of the loop, we add one to the current value of {\tt count}
+for each of the values in the list.  While the loop is executing, the 
+value of {\tt count} is the number of values we have seen ``so far''.
+
+Once the loop completes, the value of {\tt count} is the total number
+of items.   The total number ``falls in our lap'' at the end of the 
+loop.  We construct the loop so that we have what we want when the loop
+finishes.
+
+Another similar loop that computes the total of a set of numbers
+is as follows:
+\beforeverb
+\begin{verbatim}
+total = 0
+for iterval in [3, 41, 12, 9, 74, 15]:
+    total = total + iterval
+print "Count: ", count
+\end{verbatim}
+\afterverb
+%
+In this loop we {\em do} use the {\bf iteration variable}.
+Instead of simply adding one to the {\tt count} as in the previous loop, 
+we add the actual number (3, 41, 12, etc.) to the running 
+total during each loop iteration.
+If you think about the variable {\tt total}, contains the 
+``running total of the values so far''.  So before the loop
+starts {\tt total} is zero because we have not yet seen any values,
+during the loop {\tt total} is the running total, and at the end of 
+the loop {\tt total} is the overal total of all the values 
+in the list.
+
+Neither the counting loop not the summing loop are particularly 
+useful in practice because there are built-in functions 
+{\tt len()} and {\tt sum()} that computer the number of 
+items in a list and the total of the items in the list
+respectively.
 
 \subsection{Maximum loop}
 
